--- a/Bag/Base.lproj/Main.storyboard
+++ b/Bag/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14A386a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="CKZ-Ff-ArH">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="CKZ-Ff-ArH">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
@@ -530,7 +530,7 @@
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_date" translatesAutoresizingMaskIntoConstraints="NO" id="ccb-53-Fmf">
                                                 <rect key="frame" x="15" y="72" width="30" height="30"/>
                                             </imageView>
-                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="行程日期" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oOg-5t-unb">
+                                            <textField opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="行程日期" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oOg-5t-unb">
                                                 <rect key="frame" x="53" y="72" width="246" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="0w6-bm-Gxg"/>
@@ -538,6 +538,15 @@
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OuH-F0-x21">
+                                                <rect key="frame" x="53" y="72" width="246" height="30"/>
+                                                <state key="normal">
+                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="onTravelDateButtonTapped:" destination="msf-3m-sbX" eventType="touchUpInside" id="78F-GK-o51"/>
+                                                </connections>
+                                            </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UAr-Mb-l7A" customClass="LighHorizontalLineView" customModule="Bag" customModuleProvider="target">
                                                 <rect key="frame" x="53" y="112" width="267" height="1"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -562,18 +571,21 @@
                                             <constraint firstAttribute="trailing" secondItem="UAr-Mb-l7A" secondAttribute="trailing" id="5hN-aP-IgU"/>
                                             <constraint firstItem="RAm-fT-fRs" firstAttribute="top" secondItem="xAa-kO-IMS" secondAttribute="top" constant="20" id="6mU-5i-Evq"/>
                                             <constraint firstItem="ccb-53-Fmf" firstAttribute="top" secondItem="50P-Db-qVS" secondAttribute="bottom" constant="22" id="8AS-RF-fe1"/>
+                                            <constraint firstItem="oOg-5t-unb" firstAttribute="leading" secondItem="OuH-F0-x21" secondAttribute="leading" id="CMF-VJ-G6h"/>
                                             <constraint firstAttribute="trailing" secondItem="RAm-fT-fRs" secondAttribute="trailing" constant="21" id="E5u-SP-J63"/>
                                             <constraint firstItem="RAm-fT-fRs" firstAttribute="leading" secondItem="zZ5-d7-09Y" secondAttribute="leading" id="FZe-RD-gjn"/>
                                             <constraint firstItem="oOg-5t-unb" firstAttribute="leading" secondItem="TsK-64-nbA" secondAttribute="leading" id="FhA-Uy-0LK"/>
                                             <constraint firstItem="oOg-5t-unb" firstAttribute="leading" secondItem="UAr-Mb-l7A" secondAttribute="leading" id="J2Z-wL-J6N"/>
                                             <constraint firstAttribute="height" constant="180" id="J88-Sp-kgf"/>
                                             <constraint firstAttribute="trailing" secondItem="oOg-5t-unb" secondAttribute="trailing" constant="21" id="Jsf-cW-I5w"/>
+                                            <constraint firstItem="oOg-5t-unb" firstAttribute="top" secondItem="OuH-F0-x21" secondAttribute="top" id="K4a-Nl-q7D"/>
                                             <constraint firstAttribute="trailing" secondItem="TsK-64-nbA" secondAttribute="trailing" constant="21" id="NQD-3T-t6t"/>
                                             <constraint firstItem="zZ5-d7-09Y" firstAttribute="top" secondItem="RAm-fT-fRs" secondAttribute="bottom" constant="10" id="OFO-8O-Pht"/>
                                             <constraint firstItem="ccb-53-Fmf" firstAttribute="leading" secondItem="50P-Db-qVS" secondAttribute="leading" id="PQs-wC-URf"/>
                                             <constraint firstItem="50P-Db-qVS" firstAttribute="leading" secondItem="xAa-kO-IMS" secondAttribute="leading" constant="15" id="ZBr-Ud-y8g"/>
                                             <constraint firstItem="UAr-Mb-l7A" firstAttribute="top" secondItem="oOg-5t-unb" secondAttribute="bottom" constant="10" id="ZJ4-gQ-T0j"/>
                                             <constraint firstItem="50P-Db-qVS" firstAttribute="top" secondItem="xAa-kO-IMS" secondAttribute="top" constant="20" id="ZQb-hM-GCG"/>
+                                            <constraint firstItem="oOg-5t-unb" firstAttribute="width" secondItem="OuH-F0-x21" secondAttribute="width" id="iUf-7g-yhA"/>
                                             <constraint firstItem="RAm-fT-fRs" firstAttribute="leading" secondItem="oOg-5t-unb" secondAttribute="leading" id="lHI-Uo-u1E"/>
                                             <constraint firstItem="bGV-ki-VBM" firstAttribute="top" secondItem="ccb-53-Fmf" secondAttribute="bottom" constant="28" id="lq0-NI-bUH"/>
                                             <constraint firstAttribute="trailing" secondItem="zZ5-d7-09Y" secondAttribute="trailing" id="nk3-cf-XNK"/>
@@ -589,7 +601,7 @@
                                         <color key="textColor" red="0.48627450980392156" green="0.53333333333333333" blue="0.5725490196078431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iAQ-id-Z5M" customClass="UIControl">
+                                    <view tag="1" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iAQ-id-Z5M" customClass="UIControl">
                                         <rect key="frame" x="15" y="226" width="65" height="65"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="icon_trip_badminton" translatesAutoresizingMaskIntoConstraints="NO" id="is3-z4-pnS">
@@ -603,8 +615,11 @@
                                             </label>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <action selector="onRecommendTravelControlTapped:" destination="msf-3m-sbX" eventType="touchUpInside" id="SkO-R8-FvA"/>
+                                        </connections>
                                     </view>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Iiz-u7-n1C" customClass="UIControl">
+                                    <view tag="2" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Iiz-u7-n1C" customClass="UIControl">
                                         <rect key="frame" x="90" y="226" width="65" height="65"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="icon_trip_swimming" translatesAutoresizingMaskIntoConstraints="NO" id="puP-pi-hXA">
@@ -618,8 +633,11 @@
                                             </label>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <action selector="onRecommendTravelControlTapped:" destination="msf-3m-sbX" eventType="touchUpInside" id="rhb-NT-Ubg"/>
+                                        </connections>
                                     </view>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZrN-ng-XiL" customClass="UIControl">
+                                    <view tag="3" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZrN-ng-XiL" customClass="UIControl">
                                         <rect key="frame" x="165" y="226" width="65" height="65"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="icon_trip_basketball" translatesAutoresizingMaskIntoConstraints="NO" id="NtI-MY-8jv">
@@ -633,8 +651,11 @@
                                             </label>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <action selector="onRecommendTravelControlTapped:" destination="msf-3m-sbX" eventType="touchUpInside" id="goq-GP-Hhs"/>
+                                        </connections>
                                     </view>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1BV-7l-X5k" customClass="UIControl">
+                                    <view tag="4" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="1BV-7l-X5k" customClass="UIControl">
                                         <rect key="frame" x="238" y="226" width="65" height="65"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="打乒乓球" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Dk6-ZF-f1a">
@@ -648,8 +669,11 @@
                                             </imageView>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <action selector="onRecommendTravelControlTapped:" destination="msf-3m-sbX" eventType="touchUpInside" id="shv-Ri-wDc"/>
+                                        </connections>
                                     </view>
-                                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xG9-YB-mnE" customClass="UIControl">
+                                    <view tag="5" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="xG9-YB-mnE" customClass="UIControl">
                                         <rect key="frame" x="15" y="300" width="65" height="65"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="icon_trip_skiing" translatesAutoresizingMaskIntoConstraints="NO" id="i5F-Pf-Weq">
@@ -663,6 +687,9 @@
                                             </label>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <action selector="onRecommendTravelControlTapped:" destination="msf-3m-sbX" eventType="touchUpInside" id="3Ih-Sx-i8M"/>
+                                        </connections>
                                     </view>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
